--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -149,6 +149,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         </activity>
 
         <activity
+            android:name=".GMLR"
+            android:label="Custom Headers" >
+            <intent-filter>
+                <action android:name="org.omnirom.DaylightHeaderPack1" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".dragon_ball"
             android:label="Dragon Ball" >
             <intent-filter>
