--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -136,9 +136,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <activity
 	    android:name=".one_piece"
 	    android:label="One Piece" >
+            <intent-filter>
+                <action android:name="org.omnirom.DaylightHeaderPack1" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+	<activity
+	    android:name=".hentai_header"
+	    android:label="Hentai - Header" >
 	    <intent-filter>
                 <action android:name="org.omnirom.DaylightHeaderPack1" />
-
                 <category android:name="android.intent.category.DEFAULT" />
 	    </intent-filter>
 	</activity>
