--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -133,5 +133,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+	    android:name=".one_piece"
+	    android:label="One Piece" >
+	    <intent-filter>
+                <action android:name="org.omnirom.DaylightHeaderPack1" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+	    </intent-filter>
+	</activity>
     </application>
 </manifest>
