--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -162,6 +162,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <intent-filter>
                 <action android:name="org.omnirom.DaylightHeaderPack1" />
                 <category android:name="android.intent.category.DEFAULT" />
+	    </intent-filter>
+	</activity>
+        <activity
+            android:name=".naruto_2"
+            android:label="Naruto 2" >
+            <intent-filter>
+                <action android:name="org.omnirom.DaylightHeaderPack1" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
