--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -156,5 +156,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+	<activity
+            android:name=".superhero"
+            android:label="SuperHero" >
+            <intent-filter>
+                <action android:name="org.omnirom.DaylightHeaderPack1" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
